# whatsrook

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DISCLAIMER.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  app.json  auth.go  bot.go  calls.go  cli.go  cli.mts  client.go  connection_authentication.go  control.go  docker-compose.yml  engine.go  entrypoint.sh  events.go  examplestore.db  go.mod  go.sum  main.go  messages.go  package.json  render.yaml  session.go  tsconfig.json  web.mts  ws.go
.devcontainer/: devcontainer.json
commands/: abstract.go  ai.go  ai_tools.go  ai_tools_test.go  anticall.go  anticall_test.go  antimsg.go  antimsg_test.go  botai.go  botai_test.go  buttons.go  buttons_test.go  call.go  callaudio.go  callaudioreply.go  callplace.go  chatmgmt.go  commands.go  cookie.go  cpu.go  dispatch.go  error.go  facebook.go  fetch.go  fetch_test.go  filter.go  filter_test.go  font.go  gallery.go  gallery_test.go  group.go  group_test.go  helper.go  instagram.go  list.go  list_test.go  location.go  location_test.go  media.go  media_test.go  (+25 more)
ember/: ember.go  ember_test.go  send.go
example/: README.md  client.go  config.go
font/: font.go  font_test.go
logger/: logger.go  logger_test.go
meta_ai/: cache.go  parser.go  parser_test.go  types.go  utils.go
proto/: ws.proto
scripts/: generate-proto.sh  rebuild.ps1
sender/: abstract.go  context.go  send.go  sender_test.go
src/: cli.rs  index.mts  main.rs  messages.rs  utils.rs  ws.rs
store/: clientpayload.go  noop.go  sessioncache.go  (+3 more)
(+62 files in other folders)
