[package]
name = "zevBot"
version = "0.0.2"
edition = "2024"
resolver = "2"

[dependencies]
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
